--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -57,9 +58,9 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tplant": "^3.1.3",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "bcryptjs": "^2.4.3"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
