--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
+    "casbin": "^5.38.0",
+    "casbin-pg-adapter": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -50,6 +52,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "pg": "^8.16.2",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -68,6 +71,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "supabase": "^2.26.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
