--- a/package.json
+++ b/package.json
@@ -48,10 +48,14 @@
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
+    "glob": "^11.0.3",
+    "inflight": "^1.0.6",
     "input-otp": "1.4.1",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-domexception": "^2.0.2",
     "pg": "^8.16.2",
     "react": "^19",
     "react-day-picker": "8.10.1",
