--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-themes": "latest",
     "node-domexception": "^2.0.2",
     "pg": "^8.16.2",
+    "postgres": "^3.4.7",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
